[package]
name = "abstract-sqlx-bindings"
version = "0.1.0"
edition = "2021"

[features]
temp-pool = []

[dependencies]
abstract-db = { git = "https://github.com/andronix1/abstract-db.git" } 
anyhow = "1.0.86"
async-trait = "0.1.80"
sqlx = { version = "0.7.3", features = ["postgres", "runtime-tokio"] }
